* axes and such weapons no longer attack twice, now their damage is increased instead (less dmg numbers!)
* added bonus loot drop stats (many variations)
* added all attribute stat
* stats now calculate as soon as you change gears, feels a lot neater.
* i made many things automatically localizable, so the lang file should be prettier and more organized now! This also means i'll allow more things to be translated as it's easier now.
* remade my stat system, should be easier to add new stats, especially elemental ones or ones with lots of variations! (this could break some past gears but i tried to avoid it, report if something is broken!)
* shields are now a lot smaller so you can actually see when wielding them!
* added some unique shields
* some uniques can now have sets. Most will also have their own exclusive sets and a rare chance to get other sets.
* remodeled the player stats Gui! (press P). Now stats are divided in rows and hopefully easy to understand icons will help. Some stats also don't appear as they only influence other stats, so it's not needed.
And there's too many stats to list them all.. There's at least 50 traits. plus 25 conversion and transfers, so i assume you don't want to scroll those!
* added commands /givestat /removestat so you can add custom stats with custom identifiers, this way you can have an achievement like "complete x dungeon" in your mod and give "x_dun_completed" stat to a player.
* bomb spells now have gravity and higher explosion radius, they also detonate faster
* there's now base spell damage for players, a bit higher early on so low lvl spells are a bit more effective
* currencies now show tier and rarity on their tooltips
* added config option for starter items
* stations now have shift click functionality! This was actually really hard to do.
* added more really rare currencies
* should fix mobs not spawning in maps sometimes







