@@ -16,7 +16,7 @@ mod_icon=logo.png
 # Forge / Minecraft
 version_forge=1.14.3-27.0.2
 version_minecraft=1.14.3
-version_mcp=20190623-1.14.2
+version_mcp=20190625-1.14.3
 
 # Mod Dependencies
 version_curios=1.13.2-0.11
