@@ -10,34 +10,20 @@ import com.robertx22.uncommon.capability.PlayerMapData;
 import com.robertx22.uncommon.datasaving.Load;
 import net.minecraft.block.LeavesBlock;
 import net.minecraft.entity.Entity;
-import net.minecraft.entity.EntityClassification;
 import net.minecraft.entity.LivingEntity;
 import net.minecraft.entity.player.PlayerEntity;
 import net.minecraft.util.math.BlockPos;
 import net.minecraft.world.IWorld;
-import net.minecraft.world.ServerWorld;
 import net.minecraft.world.World;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.function.Predicate;
 
 public class WorldUtils {
 
     public static void spawnEntity(World world, Entity entity) {
 
         world.addEntity(entity);
-
-    }
-
-    static Predicate<Entity> filter = (entity) -> {
-        return entity.world.getChunkProvider().isChunkLoaded(entity);
-    };
-
-    public static boolean hasLessThanMaximumEntitiesOfType(ServerWorld world,
-                                                           EntityClassification enclass) {
-        int entities = world.getEntities(null, filter).size();
-        return entities < enclass.getMaxNumberOfCreature();
 
     }
 
