@@ -29,9 +29,9 @@ public class RandomSurfaceDecoration extends Feature<NoFeatureConfig> {
     }
 
     @Override
-    public boolean place(IWorld iworld,
-                         ChunkGenerator<? extends GenerationSettings> generator,
-                         Random rand, BlockPos pos, NoFeatureConfig config) {
+    public boolean func_212245_a(IWorld iworld,
+                                 ChunkGenerator<? extends GenerationSettings> generator,
+                                 Random rand, BlockPos pos, NoFeatureConfig config) {
 
         IWP iwp = WorldUtils.getIWP(iworld);
 
